src/objects/ints__Indicators__c.object
<CustomObject>
    <fields>
        <fullName>ints__ACHIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACHIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__ACHOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__AvailableBalance__c</fullName>
        <label>AvailableBalance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageAmountOfWithdrawalsInLast14Days__c</fullName>
        <label>AverageAmountOfWithdrawalsInLast14Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageAmountOfWithdrawalsInLast30Days__c</fullName>
        <label>AverageAmountOfWithdrawalsInLast30Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageAmountOfWithdrawalsInLast60Days__c</fullName>
        <label>AverageAmountOfWithdrawalsInLast60Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageBalanceForLast14Days__c</fullName>
        <label>Average Balance For Last 14 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageBalanceForLast30Days__c</fullName>
        <label>Average Balance For Last 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageBalanceForLast60Days__c</fullName>
        <label>Average Balance For Last 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageBalance__c</fullName>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageDaysTo50Percent__c</fullName>
        <label>Average Days To 50 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageDaysTo75Percent__c</fullName>
        <label>Average Days To 75 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageDaysTo95Percent__c</fullName>
        <label>Average Days To 95 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AvgAmtOfDepositsInLast14Days__c</fullName>
        <label>AvgAmtOfDepositsInLast14Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AvgAmtOfDepositsInLast30Days__c</fullName>
        <label>AvgAmtOfDepositsInLast30Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AvgAmtOfDepositsInLast60Days__c</fullName>
        <label>AvgAmtOfDepositsInLast60Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__BalanceBelow0Last30Days__c</fullName>
        <label>Balance Below 0 Last 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__BalanceBelow0Last60Days__c</fullName>
        <label>Balance Below 0 Last 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__BalanceBelow0Last90Days__c</fullName>
        <label>Balance Below 00 Last 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__BalanceFrom3DaysBefore__c</fullName>
        <label>Balance From 3 Days Before</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__CurrentBalance__c</fullName>
        <label>CurrentBalance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__HighestDay__c</fullName>
        <label>Highest Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__HighestWeek__c</fullName>
        <label>Highest Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__LargestDepositDate__c</fullName>
        <label>Largest Deposit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__LargestDeposit__c</fullName>
        <label>Largest Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__LargestWithdrawalDate__c</fullName>
        <label>Largest Withdrawal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__LargestWithdrawal__c</fullName>
        <label>Largest Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__LowestDay__c</fullName>
        <label>Lowest Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__LowestWeek__c</fullName>
        <label>Lowest Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Microbilt_Information__c</fullName>
        <label>Microbilt Information</label>
        <referenceTo>ints__Microbilt_Information__c</referenceTo>
        <relationshipName>Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__MostRecentDirectDeposit__c</fullName>
        <label>Most Recent Direct Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NegativeOccurences__c</fullName>
        <label>Negative Occurences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfDepositsOver1000__c</fullName>
        <label>Number Of Deposits Over 1000</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfDepositsOver100__c</fullName>
        <label>Number Of Deposits Over 100</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfDepositsOver500__c</fullName>
        <label>Number Of Deposits Over 500</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfWithdrawalsOver1000__c</fullName>
        <label>Number Of Withdrawals Over 1000</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfWithdrawalsOver100__c</fullName>
        <label>Number Of Withdrawals Over 100</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfWithdrawalsOver500__c</fullName>
        <label>Number Of Withdrawals Over 500</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__SecondLargestDepositDate__c</fullName>
        <label>Second Largest Deposit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__SecondLargestDeposit__c</fullName>
        <label>Second Largest Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__SecondLargestWithdrawalDate__c</fullName>
        <label>Second Largest Withdrawal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__SecondLargestWithdrawal__c</fullName>
        <label>Second Largest Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__ThirdLargestDepositDate__c</fullName>
        <label>Third Largest Deposit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__ThirdLargestDeposit__c</fullName>
        <label>Third Largest Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__ThirdLargestWithdrawalDate__c</fullName>
        <label>Third Largest Withdrawal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__ThirdLargestWithdrawal__c</fullName>
        <label>Third Largest Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDepositsAsCashInLast30Days__c</fullName>
        <label>TotalAmountOfDepositsAsCashInLast30Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDepositsAsCashInLast60Days__c</fullName>
        <label>TotalAmountOfDepositsAsCashInLast60Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDepositsAsCashInLast90Days__c</fullName>
        <label>TotalAmountOfDepositsAsCashInLast90Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDepositsInLast14Days__c</fullName>
        <label>Total Amount Of Deposits In Last 14 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDepositsInLast30Days__c</fullName>
        <label>Total Amount Of Deposits In Last 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDepositsInLast60Days__c</fullName>
        <label>Total Amount Of Deposits In Last 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfDeposits__c</fullName>
        <label>Total Amount Of Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfWithdrawalsInLast14Days__c</fullName>
        <label>TotalAmountOfWithdrawalsInLast14Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfWithdrawalsInLast30Days__c</fullName>
        <label>TotalAmountOfWithdrawalsInLast30Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfWithdrawalsInLast60Days__c</fullName>
        <label>TotalAmountOfWithdrawalsInLast60Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmountOfWithdrawals__c</fullName>
        <label>Total Amount Of Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmtOfDepositsAsCashInLast14Days__c</fullName>
        <label>TotalAmtOfDepositsAsCashInLast14Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmtOfWdwlsAsCashInLast14Days__c</fullName>
        <label>TotalAmtOfWdwlsAsCashInLast14Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmtOfWdwlsAsCashInLast30Days__c</fullName>
        <label>TotalAmtOfWdwlsAsCashInLast30Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalAmtOfWdwlsAsCashInLast60Days__c</fullName>
        <label>Total Withdrawals Cash In Last 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalNumberOfDeposits__c</fullName>
        <label>Total Number Of Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalNumberOfWithdrawals__c</fullName>
        <label>Total Number Of Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Microbilt Indicators</label>
    <nameField>
        <displayFormat>I - {000000}</displayFormat>
        <label>Indicators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Microbilt Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>